Trying to fix load speed on mobiles (again)

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body{
 	justify-content: left;
 	padding-left: 5%;
 	align-items:center;
-	background: url('./Заглушки/header.jpg') center / cover no-repeat;
+	background: url('./Заглушки/header.webp') center / cover no-repeat;
 	color: white;
 	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
@@ -131,7 +131,7 @@ body{
 	font-size: 14px;
 }
 .content__header {
-	background: url('./Заглушки/content__block.jpg') center / cover no-repeat;
+	background: url('./Заглушки/content__block.webp') center / cover no-repeat;
 	display: flex;
 	height: 50%;
 	width: 100%;
